# blog-webhook

./: .gitignore  README.md  main.py  pyproject.toml
app/: auth.py  dependencies.py  main.py  settings.py
app/routers/: deploy.py
cli/: __main__.py  model.py  webp.py
cli/model/: __init__.py  prompts.py  translate.py
