[project]
name = "blog-webhook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.118.0",
    "pillow>=11.3.0",
    "pydantic-settings>=2.11.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"

[dependency-groups]
dev = [
    "ruff>=0.13.3",
]

[project.scripts]
cli = "cli.main:cli"
